---------------------------------------------------------------------------------------------------
Version: 2.6.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.6.3
Date: 2025-09-27
  Bugfixes:
    - Fixed an issue with trains when inserting a stage before the stage a train is in.
    - Fixed partially missing support for agricultural towers.
    - Fixed several issues related to elevated rails.
  Changes:
    - Editor should now be more resilient to crashes due to missing previews.
    - Removed redundant item request indicator from entities that already have them
---------------------------------------------------------------------------------------------------
Version: 2.6.2
Date: 2025-09-27
  Bugfixes:
    - Fixed changelog format error.
---------------------------------------------------------------------------------------------------
Version: 2.6.1
Date: 2025-09-16
  Features:
    - Added import/export support for item requests
---------------------------------------------------------------------------------------------------
Version: 2.6.0
Date: 2025-09-16
  Features:
    - Added support for item requests! Bot item requests for an entity will be saved (even if it's not a ghost), and show up in blueprints.
    - Updating item requests only affects the current stage, unlike other settings.
    - Modules are still staged (even though they are technically item requests).
---------------------------------------------------------------------------------------------------
Version: 2.5.2
Date: 2025-09-07
  Bugfixes:
    - Fixed several issues related to blueprint icon settings.
    - This may also fix crashes when creating a new stage, on a project created in an earlier version.
---------------------------------------------------------------------------------------------------
Version: 2.5.1
Date: 2025-09-02
  Bugfixes: