@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.6.4
 Date: ????
-  Changes:
+  Buxfixes:
+    - Actually fixed crash when creating a new stage, on a project loaded in an earlier version. Don't use 2.5.1 y'all
 ---------------------------------------------------------------------------------------------------
 Version: 2.6.3
 Date: 2025-09-27
